libcm4all-was (0.2) unstable; urgency=low

  * simple: flush the control buffer in _end()

 --   

libcm4all-was (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Wed, 09 Feb 2011 15:18:03 +0100